--- a/project2/01-layout.html
+++ b/project2/01-layout.html
@@ -3,7 +3,7 @@
   <head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="01_layout.css">
 	<link href="https://fonts.googleapis.com/css?family=Playfair+Display+SC" rel="stylesheet">
 	<title>CSS Layout</title>
@@ -55,8 +55,8 @@
 
     <div class="box box-5">
       <div class="box-content center">
-      	<h3>Uncatagorized</h3>
-      	<h3>3%</h3>
+      	<h3 class="h3">Uncatagorized</h3>
+      	<h3 class="h3">3%</h3>
       </div>
     </div>
 
